--- a/templates/finance.html
+++ b/templates/finance.html
@@ -58,6 +58,11 @@
 								<br><br>
 								This model is notorious for its accuracy and flexibility. However, the volatility of closing prices vary depending on the equity itself, 
 								so the responsible user will invoke their personal judgement and use this merely as a tool to compliment (or contradict) their personal claims.
+								 <br><br>
+								 Note: I limitted the start date to 5 year prior to help mitigate computational cost with the added benefit of predictive accuracy. 
+								 Although you may ask the model to forecast far into the future, I recommend looking at more immediate forecasts using small time intervals such as 
+								 quarterly (0.25/0.75) or semi-annually (0.5/1/1.5).
+								 You will notice, the farther into the future the model predicts, the wider the uncertainty invterval is, indicating less reliable predictions. 
                              </p>
 
 							
