--- a/templates/finance.html
+++ b/templates/finance.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Stock Price Forecast</title>
+		<title>Financial Modeling</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/static/css/main.css" />
@@ -44,36 +44,42 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Forecasting Closing Prices of Financial Equities</h1>
+							<h1>Financial Modeling</h1>
 							<center><img src="/static/css/nyc.jpg" width="800" alt="" /></center>
-							<h4>March 28, 2024</h4>
+							<h4>July 9, 2024</h4>
 							 <p>
                                 Hi team,<br>
-                                The data we will be using is generously provided by Yahoo Finance. We will look at the closing price of 
-                                equities by day. The data availible varies depending on the equity's maturity. The goal is to fit a forecasting 
-                                model to predict the trend for equities of personal interest; we will utilize the Prophet Model to do so.
-                                Most notably, I've created an interface for you to input your ticker symbol and forecast length so that you can observe
-                                and explore the forecasted trends and prediction metrics computed by the Prophet model. You can look up ticker symbols 
-								<a href="https://ca.finance.yahoo.com/lookup/" target="_blank">here</a>.
+                                Here, I provide two tools operating at the confluence of statistics and finance. The first is a forecasting tool that uses the Prophet Model to fit and 
+								predict the daily adjusted closing price of a specified asset. You can look up ticker symbols 
+								<a href="https://ca.finance.yahoo.com/lookup/" target="_blank">here</a>. The data we will be using is provided by Yahoo Finance and the Federal Reserve Bank.
+
+								The Prophet Model is known for its accuracy and flexibility. However, the volatility of closing prices varies depending on the asset itself, so the responsible user will
+								invoke their personal judgment and use this merely as a tool to complement (or contradict) their personal claims.
 								<br><br>
-								This model is notorious for its accuracy and flexibility. However, the volatility of closing prices vary depending on the equity itself, 
-								so the responsible user will invoke their personal judgement and use this merely as a tool to compliment (or contradict) their personal claims.
-								 <br><br>
-								 Note: I limitted the start date to 5 years prior in order to help mitigate computational cost with the added benefit of predictive accuracy. 
-								 Although you may ask the model to forecast far into the future, I recommend looking at more immediate forecasts using small time intervals such as 
-								 days and months.
-								 You will notice, the farther into the future the model predicts, the wider the uncertainty invterval is, indicating less reliable predictions. 
+								As shown below, you can input the ticker symbol, forecasting period, and time unit. Note, the forecasting period will depend on the asset's maturity.
+								I limit the start date to 5 year prior in order to help mitigate computational cost and enhance predictive accuracy. 
+								Although you may ask the model to forecast far into the future, I recommend looking at more immediate forecasts using small time intervals such as 
+								days and months.
+								You will notice, the farther into the future the model predicts, the wider the uncertainty invterval is, indicating less reliable predictions. 
+								<br><br>
+								The second tool is one for portfolio optimzation and valuation. This tool computes the efficiency frontier of a portfolio using 100,000 simulations and notes the
+								optimal portfolio based on the <a href="https://www.investopedia.com/terms/s/sharperatio.asp" target="_blank">Sharpe Ratio</a>. Once the optimal portfolio is identified, 
+								relevant performance metrics are displayed, such as expected return, volatility, and asset weights. 
+								Moreover, the <a href = "https://www.investopedia.com/terms/s/sml.asp" target="_blank">Security Market Line</a> 
+								is fit and beta coefficients are plotted to portray the valuation of each asset as well as the overall
+								portfolio. Note, the market return is based on the S&P 500 Index (^GSPC). 
                              </p>
 
-							
+							<h3>Single Asset Forecast</h3>
+
 							<form id="nameForm" action="/forecast" method="POST">
 								<div class="row gtr-uniform">
 									<div class="col-4 col-12-xsmall">
-										<input type="text" name="ticker" id="ticker" value="" placeholder="Ticker Symbol" required/>
+										<input type="text" name="ticker" id="ticker" value="" placeholder="Ticker Symbol (eg. AAPL)" required/>
 									</div>
 
 									<div class="col-4 col-12-xsmall">
-										<input type="text" name="period" id="period" placeholder="Forecast Period (# of future years to predict)" required/>
+										<input type="text" name="period" id="period" placeholder="Forecast Period (eg. 5)" required/>
 									</div>
 
 									<div class="col-4">
@@ -85,16 +91,31 @@
 										</select>
 									</div>
 
-
-
 								</div>
 
 								<br><br>
-								<button type="submit">Submit</button>
+								<button type="submit">Submit Forecast</button>
 								<div id="output"></div>
 
+							</form>
+
+
+							<h3>Portfolio Optimization and Valuation</h3>
+
+							<form id="nameForm" action="/portfolio" method="POST">
+								<div class="row gtr-uniform">
+									<div class="col-4 col-12-xsmall">
+										<input type="text" name="tickers" id="tickers" value="" placeholder="Ticker Symbols (eg. AAPL, TSLA, AMZN)" required/>
+									</div>
+								</div>
+
+								<br><br>
+								<button type="submit">Submit Portfolio</button>
+								<div id="output"></div>
 
 							</form>
+
+
 
 						</div>
 					</div>
