--- a/templates/result_portfolio.html
+++ b/templates/result_portfolio.html
@@ -71,6 +71,14 @@
                                 Alternatively, if assets are below the SML, the market overvalues their return. 
                             </p>
 							<div>{{ plot_html | safe }}</div>
+
+							<p>
+								Beta is a measure of risk compared to the overall market (the S&P 500 Index is used as the benchmark.) A beta value above 1 indicates that the asset
+								has historically been more volatile than the market. Alternatively, a beta value below 1 indicates that the asset has historically been less volatile
+								than the market.
+							</p>
+
+
 							<br><br><br><br>
 							<h4>This is not to be considered financial advice</h4>
 						</div>
