--- a/templates/result_portfolio.html
+++ b/templates/result_portfolio.html
@@ -24,7 +24,7 @@
 							<!-- Nav -->
 								<nav>
 									<ul class="actions">
-										<li><a href="https://seanmulherin.github.io/" class="button large">HOME</a></li>
+										<li><a href="https://finance-ctzs.onrender.com/" class="button large">Back</a></li>
 									</ul>		
 								</nav>
 						</div>
@@ -59,8 +59,8 @@
 
 							<h2>Efficiency Frontier</h2>
                             <p>
-                                To form the theoretical efficiency frontier, 10,000 portolios are simulated based on randomly generated asset weights. The optimal portfolio (red) is determined using the Sharpe Ratio, which is based on each 
-                                portfolio's expected return, standard deviation, and the risk free rate, (defined as the average annual rate of return of a U.S. treasure security for the past decade.) 
+                                To form the theoretical efficiency frontier, 1,000 portfolios are simulated based on randomly generated asset weights. The optimal portfolio (red) is determined using the Sharpe Ratio, which is based on each 
+                                portfolio's expected return, standard deviation, and the risk free rate, defined as the average annual rate of return of a U.S. treasury security for the past decade. 
                             </p>
 
 							<div>{{ plot_html1 | safe }}</div>
@@ -80,13 +80,11 @@
 								Note: If the security market line is missing and assets are not plotted, then the required data is not available on Yahoo Finance. This is likely
 								the case if they are fringe assets. For example, many crypto currencies are not represented by the S&P 500 Index and so beta values are not
 								readily available through Yahoo Finance. 
-
-
 							</p>
 
 
 							<br><br><br><br>
-							<h4>This is not to be considered financial advice</h4>
+							<i>This is not to be considered financial advice. Instead, consult a finance professional.</i>
 						</div>
 					</div>
 
