--- a/templates/result.html
+++ b/templates/result.html
@@ -18,28 +18,11 @@
 							<!-- Nav -->
 								<nav>
 									<ul class="actions">
-										<li><a href="https://seanmulherin.github.io/" class="button large">HOME</a></li>
+										<li><a href="https://finance-ctzs.onrender.com/" class="button large">Back</a></li>
 									</ul>		
 								</nav>
 						</div>
 					</header>
-
-				<!-- Menu -->
-				<nav id="menu">
-					<h2>Menu</h2>
-					<ul>
-						<li><a href="https://seanmulherin.github.io/">Home</a></li>
-						<li><a href="https://seanmulherin.github.io/blog.html">Blog</a></li>
-						<li><a href="https://seanmulherin.github.io/neuralnetwork.html">Artificial Neural Network</a></li>
-						<li><a href="https://seanmulherin.github.io/carbonization.html">Carbonization Analysis</a></li>
-						<li><a href="https://seanmulherin.github.io/breastcancer.html">Breast Cancer Detection</a></li>
-						<li><a href="https://seanmulherin.github.io/modelingEth.html">Modeling Ethereum</a></li>
-						<li><a href="https://seanmulherin.github.io/lectures.html">Lecture Notes</a></li>
-						<li><a href="https://seanmulherin.github.io/papers.html">Papers</a></li>
-						<li><a href="https://seanmulherin.github.io/resume.html">Resume</a></li>
-                        <li><a href="https://seanmulherin.github.io/thesis.html">Thesis</a></li>
-					</ul>
-				</nav>
 
 				<!-- Main -->
 					<div id="main">
